# internal/project/model.go
@@ -1,0 +1,13 @@
+package project
+
+type Project struct {
+	ID              string   `json:"id,omitempty"`
+	UserID          string   `json:"user,omitempty"`
+	Name            string   `json:"name,omitempty"`
+	RepoURL         string   `json:"repo_url,omitempty"`
+	SiteURL         string   `json:"site_url,omitempty"`
+	Description     string   `json:"description,omitempty"`
+	Dependencies    []string `json:"dependencies,omitempty"`
+	DevDependencies []string `json:"dev_dependencies,omitempty"`
+	Status          string   `json:"status,omitempty"`
+}
